tests/parser/assignment/invalid_02.m.out
In invalid_02.m, line 2
|   [] = 0;
|    ^ error: expected IDENTIFIER, found A_KET instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
