tests/parser/assignment/invalid_02.m
function invalid_02()
  [] = 0;
end
